--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <img src="header.jpg" >
     <img src="hero.jpg" >
     <img src="acustica.jpg" >
+    <img src="clasica.jpg">
   </body>
 </html>
